# Converloop

./: .env.example  .gitignore  AGENTS.md  CLA.md  CLAUDE.md  COMMERCIAL.md  README.md  README.zh-CN.md  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.claude/: launch.json
.github/workflows/: ci.yml
.superpowers/brainstorm/41116-1782695534/content/: logo-direction-v12-closed-tail-angle.html
.superpowers/brainstorm/41116-1782695534/state/: server-stopped
docs/: README.md  agent-runtime-plan.md  architecture.md  build-plan.md  conversation-agent.md  craft-ui-plan.md  cross-platform.md  design.md  drills.md  expression-gap.md  learning-agent.md  lessons.md  profile-maintainer-agent.md  reply-suggestion-agent.md  task-agent.md  tutor-agent.md  ui-design-guide.md  ui-guide.md
docs/screenshots/: .gitkeep
public/: pcm-worklet.js  theme-init.js
src/: App.css  App.tsx  agent-package.test.ts  agent-package.ts  commands.test.ts  commands.ts  config.test.ts  config.ts  data-edit.ts  index.css  keychain.ts  learning-data.ts  main.tsx  orchestrator.ts  reading-guide.test.ts  reading-guide.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  edge_tts.rs  keychain.rs  lib.rs  llm.rs  main.rs  oauth.rs  profile.rs  secrets.rs  stt.rs  stt_local.rs  update_check.rs
src/agents/: auto-title.ts  bilingual-render.test.tsx  bilingual.ts  conversation-topics.test.ts  conversation-topics.ts  conversation.test.ts  conversation.ts  custom-instructions.ts  data-editor.ts  drill-builder.ts  explain-point.ts  explain.ts  history-messages.ts  input-hints.test.ts  input-hints.ts  json-schema.ts  learning-agent-builder.ts  learning.ts  lesson-writeback.ts  maintainer.ts  parse-llm-json.test.ts  parse-llm-json.ts  profile-preferences.ts  quickfire-topics.test.ts  quickfire-topics.ts  reply-suggestion.test.ts  reply-suggestion.ts  schema.test.ts  schema.ts  selection-learning-item.test.ts  selection-learning-item.ts  summarize.ts  task-agent.test.ts  task-agent.ts  translate.ts  tutor.test.ts  tutor.ts
src/components/: AboutView.tsx  AgentLibraryView.tsx  AnnotationIsland.tsx  AppDesignView.tsx  ChatView.tsx  CoachPanel.tsx  CommandPalette.tsx  ConversationPicker.tsx  CorrectionPanel.tsx  CustomLearningView.tsx  DictationReply.tsx  DictationReviewView.tsx  DictationStartScreen.tsx  DrillDocumentDialog.tsx  DrillSessionReport.tsx  DrillStartScreen.tsx  EntityRow.tsx  ErrorBoundary.tsx  InlineCorrection.test.ts  InlineCorrection.tsx  KeyboardShortcutsDialog.tsx  LearningAgentEditDialog.tsx  LearningAgentsView.tsx  LearningRecordsView.tsx  LessonSessionReview.tsx  LessonStartScreen.tsx  ListeningView.tsx  LogsView.tsx  Markdown.tsx  MasteryView.tsx  MentionMenu.tsx  MicButton.tsx  NewChatStartScreen.tsx  OnboardingWizard.tsx  PracticeStats.tsx  PreferencesPanel.tsx  ProfileView.tsx  ProviderStatus.tsx  QuickfireSetupDialog.tsx  QuickfireStartScreen.tsx  (+34 more)
src/components/chat/: model-brand.tsx  reply-suggestion.tsx  reply-transformers.tsx  turns.tsx
src/components/ui/: anchored-popover.tsx  button.tsx  dropdown-menu.tsx  input.tsx  select.tsx  spinner.tsx  switch.tsx  textarea.tsx  tooltip.tsx
src/db/: agent-jobs.ts  app-state.ts  client.ts  conversations.test.ts  conversations.ts  learning-agents.ts  learning-projects.test.ts  learning-projects.ts  learning-stats.test.ts  learning-stats.ts  mastery-logic.test.ts  mastery-logic.ts  mastery-values.ts  mastery.ts  memory-proposals.ts  probe.ts  proficiency.ts  schema.sync.test.ts  schema.ts  turn-annotations.ts  turns.test.ts  turns.ts
src/drills/: authoring-spec.ts  builtins.ts  capabilities.ts  format.test.ts  format.ts  icons.ts  index.ts  render.ts  say.ts  store.ts  types.ts
src/drills/seeds/: dictation.md  quickfire.md  review-drill.md  shadowing.md
src/i18n/: en.ts  index.test.ts  index.tsx  zh.ts
src/lib/: abortable-stream.test.ts  abortable-stream.ts  app-actions.test.ts  app-actions.ts  app-events.ts  backup.ts  error-display.ts  hint-trailer.test.ts  hint-trailer.ts  language.test.ts  language.ts  links.ts  log.ts  mastery-relevance.test.ts  mastery-relevance.ts  mentions.test.ts  mentions.ts  modal-focus.ts  platform.ts  portal-container.ts  proficiency.test.ts  proficiency.ts  settings-mirror.ts  tokens.test.ts  tokens.ts  turn-activity.test.ts  turn-activity.ts  tutor-stats.test.ts  tutor-stats.ts  ui.ts  update-check.ts  utils.test.ts  utils.ts  view-transition.ts
src/oauth/: anthropic.ts  openai.ts  pkce.test.ts  pkce.ts  store.test.ts  store.ts
src/orchestrator/: index.ts  learning-authoring.ts  mastery-review.ts  reply-tools.ts  shared.ts  topics-and-hints.ts  turn-runner.ts
src/profile/: maintainer-runner.ts  notes.test.ts  notes.ts  parse.test.ts  parse.ts  preferences.test.ts  preferences.ts  profile.test.ts  profile.ts  sanity.test.ts  sanity.ts  summary-runner.test.ts  summary-runner.ts
src/pronunciation/: config.test.ts  config.ts  format.test.ts  format.ts  gemini.ts  index.ts  openai.ts  types.ts  wav.ts
src/providers/: anthropic.test.ts  anthropic.ts  gemini.test.ts  gemini.ts  openai-responses.test.ts  openai-responses.ts  openai.test.ts  openai.ts  plugins.test.ts  plugins.ts  types.ts
src/runtime/: builtin-overrides.ts  builtins.ts  custom-agents.ts  derive-conversation.test.ts  derive-conversation.ts  drill-observer.ts  enablement.ts  index.ts  prompt-macro-store.ts  registry.test.ts  registry.ts  reply-transformer.test.ts  types.ts  visibility.ts
src/secrets/: bootstrap.ts
src/stt/: config.test.ts  config.ts  local.ts  realtime.ts  record.ts  transcribe.ts
src/styles/: markdown.css
src/tts/: audio.ts  cache.test.ts  cache.ts  config.test.ts  config.ts  edge.test.ts  edge.ts  listening.test.ts  listening.ts  mimo.ts  playback.test.ts  playback.ts  segment.test.ts  segment.ts  speak.ts  stream.test.ts  stream.ts
(+14 files in other folders)
