[package]
name = "lang-agent"
version = "0.1.0"
description = "AI 语言学习 agent 桌面端"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lang_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api: 透明窗口 + NSVisualEffect 毛玻璃(原生质感)的前置条件。
# 注意:用到 macOS 私有 API 会让应用无法上架 Mac App Store——本项目是开源 BYOK 桌面端,
# 不走商店分发,可以接受这一取舍。
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# BYOK key:应用自管的设备绑定加密存储(见 src/secrets.rs)。无主密码 → 混淆级。
chacha20poly1305 = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
machine-uid = "0.5"
# LLM HTTP:走 Rust 发请求,绕过 webview CORS;reqwest 的 bytes_stream 做真流式。
# multipart 给语音转写(stt.rs)上传音频用。
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
# Soniox 异步转写要轮询等待;tokio 本就在依赖树里(tauri/tokio-tungstenite),这里只是显式声明 time。
tokio = { version = "1", features = ["time"] }
futures-util = "0.3"
# 免费 Edge TTS 走 WebSocket(webview 无法改写 Origin 头,必须在 Rust 连);
# native-tls 复用 reqwest 已引入的同一 TLS 栈,macOS 上即系统 Security 框架,无新系统依赖。
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# macOS: 红绿灯纯 AppKit 几何定位(NSButton/NSView frame),并在原生 resize 通知里
# 同步重定位(绘制前),消除复位闪烁。不再依赖 decorum(其 cocoa→block 依赖链被
# future-incompat 标记,且 inset 语义不透明、靠魔数)。
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSNotification", "NSString", "NSOperation", "NSGeometry"] }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView", "NSButton", "NSControl", "NSResponder"] }
block2 = "0.6"
# 原生毛玻璃(NSVisualEffectView)。半透明侧栏/标题栏让窗口透出桌面与背后窗口,
# 摆脱「网页套壳」的实心填充观感。仅 macOS。
window-vibrancy = "0.6"

