[package]
name = "converloop"
version = "0.1.0"
description = "Converloop 语言学习桌面端"
authors = ["you"]
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "converloop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api: required for transparent windows + NSVisualEffect vibrancy.
# macOS private API prevents Mac App Store distribution. This open-source BYOK
# desktop app is not store-distributed, so that tradeoff is acceptable.
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# BYOK keys: app-managed device-bound encrypted storage; see src/secrets.rs.
# No master password means obfuscation-grade protection.
chacha20poly1305 = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
machine-uid = "0.5"
# LLM HTTP: Rust sends requests to bypass webview CORS; reqwest bytes_stream
# provides real streaming. multipart uploads audio for STT in stt.rs.
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
# tokio backs async HTTP/WebSocket work and local STT spawn_blocking tasks.
# rt: local Parakeet/Qwen3 inference is CPU-heavy and must not block the async runtime.
tokio = { version = "1", features = ["time", "rt"] }
futures-util = "0.3"
# Local STT: wraps the sherpa-onnx C API for offline recognition.
# The build script fetches prebuilt static libs (including onnxruntime) from
# GitHub releases and links statically by default, adding about 30-50MB to the
# binary. Offline/CI builds need SHERPA_ONNX_LIB_DIR. Models are not bundled;
# they are downloaded on demand into app data; see src/stt_local.rs.
sherpa-onnx = "1.13.2"
# Free Edge TTS uses WebSocket. The webview cannot rewrite Origin, so Rust must
# connect. native-tls reuses the same TLS stack reqwest already brings in; on macOS
# that is the system Security framework, with no new system dependency.
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# Native vibrancy (NSVisualEffectView). Translucent sidebar/titlebar let the
# desktop and windows behind show through, avoiding a solid web-wrapper feel.
# macOS only.
[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.6"
